Fix flash overflow

--- a/app/assets/stylesheets/shared/flash.css.sass
+++ b/app/assets/stylesheets/shared/flash.css.sass
@@ -2,7 +2,7 @@
   font-family: $sans
   background: $dark-yellow
   padding: 1rem
-  margin: .5rem
+  border: 5px solid white
   position: absolute
   width: 100%
 
